# Vistora

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-review.yml  pr-automation.yml
docs/: architecture.md  benchmark_plan.md  branding.md  paper_track.md  project_quality_first_master_plan.md  quality_first_model_plan.md  roadmap.md  tg_ops.md
experiments/: README.md  benchmark_template.yaml  report_template.md
models/: manifest.example.json
scripts/: bootstrap.sh  run_dev.sh
tests/: test_api_smoke.py  test_credit_ledger.py  test_model_setup.py  test_pathing.py  test_profile_store.py  test_quality_planning.py  test_runners.py  test_serial_run.py
vistora/: cli.py  core.py
vistora/api/: __init__.py  credits.py  jobs.py  profiles.py  router.py  system.py  telegram.py  web.py
vistora/app/: __init__.py  container.py  dependencies.py  main.py  settings.py
vistora/services/: capabilities.py  credits.py  job_manager.py  model_catalog.py  model_setup.py  pathing.py  pricing.py  profiles.py  runners.py  serial_run.py  storage.py  telegram_ops.py
vistora/web/: __init__.py  app.css  app.js  index.html
