[project]
name = "vistora"
version = "0.1.0"
description = "Local-first video restoration platform with API, web UI, credits, and benchmark tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
]

[project.optional-dependencies]
torch = [
  "torch>=2.8.0",
  "torchvision>=0.23.0",
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[project.scripts]
vistora = "vistora.cli:main"
vistora-web = "vistora.app.main:main"
vistora-cli = "vistora.cli:main"

[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["vistora", "vistora.*"] } }

[tool.setuptools.package-data]
"vistora.web" = ["*.html", "*.css", "*.js"]

[dependency-groups]
dev = []
